# hunter_ws

./: CLAUDE.md  CUSTOM_MODELS_GUIDE.md  README.md  your_map_name.pgm  your_map_name.yaml
src/ugv_sim/hunter_se/hunter_se_description/: CMakeLists.txt
src/ugv_sim/hunter_se/hunter_se_gazebo/: CMakeLists.txt  CUSTOM_MODELS_GUIDE.md  package.xml
src/ugv_sim/hunter_se/hunter_se_gazebo/config/nav2/: SLAM_PARAMETER_TUNING_GUIDE.md  nav2_params.yaml  slam_params.yaml
src/ugv_sim/hunter_se/hunter_se_gazebo/launch/: hunter_se_custom_models.launch.py  hunter_se_custom_models_navigation.launch.py  hunter_se_custom_models_slam.launch.py  hunter_se_factory.launch.py  hunter_se_mid360.launch.py  hunter_se_navigation.launch.py  hunter_se_navigation_test.launch.py  hunter_se_simulation_nav2.launch.py  hunter_se_spawn.launch.py
src/ugv_sim/hunter_se/hunter_se_gazebo/maps/: factory_map.pgm  factory_map.yaml  your_map_name.pgm
src/ugv_sim/hunter_se/hunter_se_gazebo/meshes/dae/: field.dae
src/ugv_sim/hunter_se/hunter_se_gazebo/meshes/stl/: field.stl
src/ugv_sim/hunter_se/hunter_se_gazebo/models/dae_model_template/: model.config  model.sdf
src/ugv_sim/hunter_se/hunter_se_gazebo/models/field_dae/: model.config  model.sdf
src/ugv_sim/hunter_se/hunter_se_gazebo/models/field_stl/: model.config  model.sdf
src/ugv_sim/hunter_se/hunter_se_gazebo/models/stl_model_template/: model.config  model.sdf
src/ugv_sim/hunter_se/hunter_se_gazebo/scripts/: create_model_from_mesh.py
src/ugv_sim/hunter_se/hunter_se_gazebo/world/: custom_models.world  factory.world
src/ugv_sim/hunter_se/hunter_se_gazebo/xacro/: hunter_se.gazebo  hunter_se_gazebo.xacro
(+4 files in other folders)
